added yml properties example

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.profiles.active=cat,ES
+#spring.profiles.active=dog,ES,dev
+#fake.username=StandardSuperUser
+#fake.password=StandardDbPassword
+#fake.jdbcurl=StandardSomeUrl
